--- a/style.css
+++ b/style.css
@@ -135,6 +135,19 @@ body{
     font-size: 16px;  
 }
 
+.addToList{
+    margin-top: 30px;
+    margin-left: 20px;
+    background-color: var(--secondary-color);
+    border: none;
+    color: white;
+    padding: 15px 15px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;  
+}
+
 #add-btn{
     color: white;
     background-color:var(--secondary-color);
