--- a/style.css
+++ b/style.css
@@ -34,6 +34,8 @@ body{
        --secondary-color:grey; 
    
    }
+/* 
+toggle button */
 
 
 .theme-toggle{
@@ -66,6 +68,9 @@ body{
     
     transform: translatex(2rem);
 }
+
+/* 
+main section */
 .main{
     
     width: 100vw;
@@ -158,6 +163,9 @@ body{
     display: inline-block;
     font-size: 16px;
 }
+
+/* main playlist section */
+
 .playlist-section{
     box-shadow: 0 1em 2em rgba(0,0,0,0.3);
     background-color: var(--primary-color);
@@ -189,6 +197,9 @@ margin-top: 1rem;
 #genreSelect:hover  {
     background-color: rgb(135, 119, 119);
 }
+
+/* playlist section */
+
 #playlistName{
     padding:10px;
     border-radius:10px;
