--- a/style.css
+++ b/style.css
@@ -140,8 +140,8 @@ main section */
     font-size: 16px;  
 }
 
-.addToList{
-    margin-top: 30px;
+.add-to-playlist-btn{
+    margin-top: 10px;
     margin-left: 20px;
     background-color: var(--secondary-color);
     border: none;
